--- a/package.json
+++ b/package.json
@@ -10,7 +10,20 @@
     "test:headless": "wdio run wdio.conf.ts --headless",
     "test:debug": "wdio run wdio.conf.ts --debug",
     "test:parallel": "wdio run wdio.conf.ts --maxInstances=4",
-    "report": "wdio run wdio.conf.ts --reporters allure"
+    "test:smoke": "wdio run wdio-smoke.conf.ts",
+    "test:login": "wdio run wdio.conf.ts --spec src/tests/specs/login.spec.ts",
+    "test:dashboard": "wdio run wdio.conf.ts --spec src/tests/specs/dashboard.spec.ts",
+    "test:accounts": "wdio run wdio.conf.ts --spec src/tests/specs/accounts.spec.ts",
+    "test:transactions": "wdio run wdio.conf.ts --spec src/tests/specs/transactions.spec.ts",
+    "test:deposits": "wdio run wdio.conf.ts --spec src/tests/specs/deposits.spec.ts",
+    "test:withdrawals": "wdio run wdio.conf.ts --spec src/tests/specs/withdrawals.spec.ts",
+    "report": "wdio run wdio.conf.ts --reporters allure",
+    "validate:env": "node src/scripts/validate-env.js",
+    "db:validator": "node src/scripts/database/db-validator.js",
+    "db:setup": "node src/scripts/database/db-setup.js",
+    "db:cleanup": "node src/scripts/database/db-cleanup.js",
+    "db:validate-schema": "node src/scripts/database/db-validator.js",
+    "testrail:upload": "node src/scripts/testrail/testrail-uploader.js"
   },
   "keywords": [
     "webdriverio",
@@ -25,16 +38,22 @@
     "@types/chai": "^5.2.3",
     "@types/node": "^20.10.0",
     "@wdio/allure-reporter": "^8.27.0",
-    "@wdio/cli": "^8.27.0",
+    "@wdio/cli": "^9.21.1",
     "@wdio/globals": "^9.17.0",
-    "@wdio/local-runner": "^8.27.0",
-    "@wdio/mocha-framework": "^8.27.0",
+    "@wdio/local-runner": "^9.21.0",
+    "@wdio/mocha-framework": "^9.21.0",
     "@wdio/spec-reporter": "^8.27.0",
     "chai": "^6.2.1",
     "chromedriver": "^129.0.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.3.0",
     "wdio-chromedriver-service": "^8.1.1",
-    "webdriverio": "^8.27.0"
+    "webdriverio": "^9.21.0"
+  },
+  "dependencies": {
+    "@testing-library/dom": "^9.3.0",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.0",
+    "mysql2": "^3.6.5"
   }
 }
